2009-11-12  Eric Maupin  <me@ermau.com>

	* String.cs: Added IsNullorWhitespace

2009-11-11  Eric Maupin  <me@ermau.com>

	* MutableLookup.cs: Added .Clear()

2009-11-06  Eric Maupin  <me@ermau.com>

	* MutableLookup.cs: Mutable implementation of ILookup<TKey,TElement>

2009-11-03  Jonathan Pryor  <jpryor@novell.com>

	* Delegates.cs, Eithers.cs, Lamdas.cs, Tuples.cs: Flush header.

2009-09-17  Jonathan Pryor  <jpryor@novell.com>

	* IEnumerable.cs: Add .Cache() extension method.
	* CachedSequence.cs: Resuscitated from
	  rocks-playground/Mono.Rocks/Cons.cs@r112950; an immutable, 
	  thread-safe, singly-linked list.  Improvements include less 
	  memory overhead (down to one pointer from two), a better name, and a
	  reason to exist (to sanely cope with potentially infinite sequences
	  which change each time you call .GetEnumerator() on them).

2009-09-23  Eric Maupin  <me@ermau.com>

	* OrderedDictionary.cs: Added a dictionary that maintains insertion
	  order without losing hashing speed benefits.

2009-09-17  Jonathan Pryor  <jpryor@novell.com>

	* String.cs: Add .Remove(string[]) extension method.  Patch thanks to
	  Eric Maupin <me@ermau.com>.

2009-06-23  Jonathan Pryor  <jpryor@novell.com>

	* IEnumerable.cs: Add .ContiguousSubsequences().  Extension method
	  courtesy of Distilled Brilliance / John Feminella.

2009-06-11  Jonathan Pryor  <jpryor@novell.com>

	* IEnumerable.cs: Add .ToReadOnlyDictionary() extension methods.
	  Contributed by Eric Maupin  <me@ermau.com>.

2009-06-11  Jonathan Pryor  <jpryor@novell.com>

	* ReadOnlyDictionary.cs: Added; implementation thanks to 
	  Eric Maupin  <me@ermau.com>.

2009-04-16  Jonathan Pryor  <jpryor@novell.com>

	* EnumerableValueReader.cs, TextValueReader.cs: Use ValueReader<T> as 
	  the implementation helper.  Mark types [CLSCompliant(false)].
	* IEnumerable.cs: Mark ToValueReader() [CLSCompliant(false)].
	* IValueReader.cs, IValueWriter.cs: Simplify (KISS!).  Don't make them